tests/errors/test_50.xpp
// Class field declared void

class Foo {
	x: void;
}

fn main() void {}
